Updated code that adds Fleet1 row onto base parameter files (now 94 columns), rearranged columns to match original group info file

--- a/Scripts/Multiple.Rpathruns.Rmd
+++ b/Scripts/Multiple.Rpathruns.Rmd
@@ -4,6 +4,9 @@ output: html_document
 ---
 
 ```{r}
+GroupInfo_CalCur_USE <- read.csv("../Data/Groupinfo_CalCur-USE.csv")  
+Diet_CalCur_USE <- read.csv("../Data/Diet_CalCur_USE.csv")  
+
 ## need to add row and column names from example files
 base_list <-list.files(path = "../Data/500BaseParameters/",
                pattern = "*.csv", 
@@ -14,25 +17,50 @@ diet_list <-list.files(path = "../Data/DietMatrices/",
 Cbase_list <- list()
 Cdiet_list <- list()
 
+#Add columns to base parameters
 groups <- GroupInfo_CalCur_USE %>%
-  select(Group, Type, Unassim, BioAcc, ProdCons, DetInput, DetritusFate, Fleet1_Landings, Fleet_1Discards) %>%
+  select(Group, Type, Unassim, BioAcc, ProdCons, DetInput, DetritusFate, Fleet1_Discards) %>%
   mutate(X = 1:94)
+groups
 
+#Extract row 94 from Group info (Fleet 1)
+Fleet1 <- GroupInfo_CalCur_USE[94, ] %>% select(Biomass, EE, PB, QB, Fleet1_Landings) %>% mutate(X= 94)
+
+#Rename rows in diet files 
 groups2 <- Diet_CalCur_USE %>% select(DIETS) %>% mutate(X= 1:94)
 
-group_vector<- groups2$DIETS[1:92]
-group_vector <- c("DIETS", group_vector)
+#Rename columns in diet file
+#group_vector <- groups2$DIETS[1:92]
+#group_vector <- c("DIETS", group_vector)
+#group_vector
 
+#test <- read_csv("../Data/DietMatrices/diet100227.csv")
+#colnames(test)
+#test_vector <- as.data.frame(test)
+#test_vector <- test$X1[1:92]
+
+#Loop to add columns rename columns, add columns onto dataset, bind fleet1 to X position 94
 for (i in 1:500) {
-  Cbase_list[[i]] <- read.csv(base_list[i]) %>%
-    rename(Biomass = "V1", PB = "V2", QB = "V3", EE = "V4", Yield = "V5") %>%
-    left_join(groups, by = "X")
-    select(-X) %>% relocate(Group)
-
-Cdiet_list[[i]] <- read.csv(diet_list[i]) %>% left_join(groups2, by = "X") %>% select(-X) %>% relocate(DIETS) 
+ Cbase_list[[i]] <- read.csv(base_list[i]) %>% 
+    rename(Biomass = "V1", PB = "V2", QB = "V3", EE = "V4", Fleet1_Landings = "V5")
+ Cbase_list[[i]] <- bind_rows(Fleet1, Cbase_list[[i]]) %>% arrange(X) %>% left_join(groups, by= "X") %>% select(-X) %>% relocate(Group)
+col_order <- c("Group", "Biomass", "EE", "PB", "QB", "Type", "Unassim", "BioAcc", "ProdCons", "DetInput", "DetritusFate", "Fleet1_Landings", "Fleet1_Discards")
+Cbase_list[[i]] <- Cbase_list[[i]][, col_order]
 }
 
-Cbase_list[[1]]
+Cbase_list[[3]]
+
+colnames(Cbase_list[[i]])
+   #for (i in 1:500) {
+ #Cbase_list[[i]] <- rbind(fleet1, Cbase_list[[i]]) %>% left_join(groups, by = "X") %>% select(-X) %>% relocate(Group)
+
+ 
+ #Cbase_list[[1]]
+ 
+
+
+#Cdiet_list[[i]] <- read.csv(diet_list[i]) %>% left_join(groups2, by = "X") %>% select(-X) %>% relocate(DIETS) 
+#Cbase_list[[1]]
 
 ```
 
