--- a/Scripts/Multiple.Rpathruns.Rmd
+++ b/Scripts/Multiple.Rpathruns.Rmd
@@ -76,106 +76,45 @@ z2 <- read_csv(diet_list[1])
 
 ```
 
-#Currently not running this either 
+#Example of change to CalCur_unbal data 
 ```{r}
-read.rpath.params2 <- function(modfile, dietfile, pedfile = NA,
-                              stanzagroupfile = NA, stanzafile = NA){
-  #Need to define variables to eliminate check() note about no visible binding
-  Type <- Group <- V1 <- NULL
-  
-  Rpath.params <- list()
-  
-  Rpath.params$model <- as.data.table(read.csv(modfile,  header = T)) %>%
-    select(-X) 
-  Rpath.params$model[Rpath.params$model == -1] <- NA
-   Rpath.params$model[Rpath.params$model[93, 5]] <- NA
+  Cbase2 <-  base_list[[1]] # Base biomass, production, fishing, etc.
+  Cdiet2 <- diet_list[[1]] # Diet matrix
 
-  
-  Rpath.params$diet  <- as.data.table(read.csv(dietfile, header = T)) %>%
+  CalCur_unbal2 <- read.rpath.params(Cbase2, Cdiet2)
+  CalCur_unbal2[[1]] <- CalCur_unbal2[[1]] %>%
     select(-X)
-  
-  
-  if(!is.na(stanzagroupfile)){
-    stanzagroup <- as.data.table(read.csv(stanzagroupfile, header = T))
-    Rpath.params$stanzas$NStanzaGroups <- nrow(stanzagroup)
-    Rpath.params$stanzas$stgroups      <- stanzagroup
-    Rpath.params$stanzas$stindiv       <- as.data.table(read.csv(stanzafile, 
-                                                                 header = T))
-  } else {
-    Rpath.params$stanzas$NStanzaGroups <- 0
-    Rpath.params$stanzas$stgroups      <- data.table(StGroupNum  = NA,
-                                                     StanzaGroup = NA,
-                                                     nstanzas    = NA,
-                                                     VBGF_Ksp    = NA,
-                                                     VBGF_d      = NA,
-                                                     Wmat        = NA,
-                                                     RecPower    = NA,
-                                                     Wmat001     = NA,
-                                                     Wmat50      = NA,
-                                                     Amat001     = NA,
-                                                     Amat50      = NA)
-    Rpath.params$stanzas$stindiv       <- data.table(StGroupNum   = NA,
-                                                     StanzaNum   = NA,
-                                                     GroupNum    = NA,
-                                                     Group       = NA,
-                                                     First       = NA,
-                                                     Last        = NA,
-                                                     Z           = NA,
-                                                     Leading     = NA)
-  }
-  if(!is.na(pedfile)){
-    Rpath.params$pedigree <- as.data.table(read.csv(pedfile, header = T))
-  } else {
-    Rpath.params$pedigree <- data.table(Group = Rpath.params$model$Group,
-                                        B     = 1,
-                                        PB    = 1,
-                                        QB    = 1,
-                                        Diet  = 1)
-    fleets <- as.character(Rpath.params$model[Type == 3, Group])
-    for(i in 1:length(fleets)){
-      Rpath.params$pedigree[, V1 := 1]
-      setnames(Rpath.params$pedigree, 'V1', fleets[i])
-    }
-  }
-  class(Rpath.params) <- 'Rpath.params'
-  return(Rpath.params)
-}
-```
-
-#Test with 1 dataset 
-```{r}
-  Cbase <-  base_list[[1]] # Base biomass, production, fishing, etc.
-  Cdiet <- diet_list[[1]] # Diet matrix
-
-  CalCur_unbal <- read.rpath.params(Cbase, Cdiet)
-  CalCur_unbal[[1]] <- CalCur_unbal[[1]] %>%
-    select(-X)
-  CalCur_unbal[[1]][93, 5] <- NA
-  CalCur_unbal[[1]][CalCur_unbal[[1]] == -1] <- NA
+  CalCur_unbal2[[1]][93, 5] <- NA
+  CalCur_unbal2[[1]][CalCur_unbal2[[1]] == -1] <- NA
    CalCur_unbal[[2]] <- CalCur_unbal[[2]] %>%
     select(-X)
   check.rpath.params(CalCur_unbal)
+  CalCur_unbal
 ```
 
 #Loop through 500 data sets!! 
 
-#Reading in data
+#Reading in data, unbalanced model
 ```{r}
+#HELP: need to check over this b/c when you run CalCur_unbal2 nothing goes, confused why 
+
+#Define list, large list where each seperate model output you can call out of list, need to define CalCur_unbalanced outside of loop, creating a list in R, have to do it b/c you are indexing, filling different parts of object at a time
   for (i in 1:500) {
-  Cbase <-  base_list[[i]] # Base biomass, production, fishing, etc.
-  Cdiet <- diet_list[[i]] # Diet matrix
+  Cbase2 <-  base_list[[i]] # Base biomass, production, fishing, etc.
+  Cdiet2 <- diet_list[[i]] # Diet matrix
 
   #Edit the datasets
-  CalCur_unbal[[i]] <- read.rpath.params(Cbase, Cdiet)
-  CalCur_unbal[[i]][[1]] <- CalCur_unbal[[i]][[1]] %>%
+  CalCur_unbal2[[i]] <- read.rpath.params(Cbase2, Cdiet2)
+  CalCur_unbal2[[i]][[1]] <- CalCur_unbal2[[i]][[1]] %>%
     select(-X)
-  CalCur_unbal[[i]][[1]][93, 5] <- NA
-  CalCur_unbal[[i]][[1]][CalCur_unbal[[i]][[1]] == -1] <- NA
-   CalCur_unbal[[i]][[2]] <- CalCur_unbal[[i]][[2]] %>%
+  CalCur_unbal2[[i]][[1]][93, 5] <- NA
+  CalCur_unbal2[[i]][[1]][CalCur_unbal2[[i]][[1]] == -1] <- NA
+   CalCur_unbal2[[i]][[2]] <- CalCur_unbal2[[i]][[2]] %>%
     select(-X)
 
-  check.rpath.params(CalCur_unbal[[i]])
+  check.rpath.params(CalCur_unbal2[[i]])
 }
+
 
 ```
  
@@ -239,7 +178,6 @@ assessment[[i]]
   # run 1 year
   run6[[i]] <- rsim.step(scene6[[i]], run6[[i]], method = 'AB', year.end=yr)  #Says in Rsim document on NOAA github that older versions of Ecosim use AB and new versions use 'RK4', default for Rpath is RK4 but we aren't using it??
 }  
-rsim.plot(run6,all_species)
 }
 ```
 
