--- a/Scripts/Multiple.Rpathruns.Rmd
+++ b/Scripts/Multiple.Rpathruns.Rmd
@@ -149,25 +149,32 @@ target_sp <- "mesopelagics"
 target_F <- 0.25
 names(target_F) <- target_sp 
 
-scence6.2 <- list()
+scene6.2 <- list()
 run6.2 <- list()
+assessment2 <- list()
+catches2 <- list()
+year <- seq(2002,2050)
+
 
 for (i in 1:500) {
-for(yr in 2002:2050){
-scence6.2[[i]] <- copy(base_sim_scene2[[i]])
-run6.2[[i]] <- rsim.run(scence6.2[[i]], method = 'AB', years=2001)
-assessment <- end_biomass(run6.2[[i]])[target_sp] * (runif(length(target_sp)) + 0.5) #argument of length 0 means input is of length zero 
-assessment
+for(j in 1:49){
+scene6.2[[i]] <- copy(base_sim_scene2[[i]])
+run6.2[[i]] <- rsim.run(scene6.2[[i]], method = 'AB', years=2001)
+assessment2[[i]] <- end_biomass(run6.2[[i]])[target_sp] * (runif(length(target_sp)) + 0.5) #argument of length 0 means input is of length zero 
+assessment2[[i]]
   # convert target F * assessment to a total catch 
-  catches <- target_F * assessment
+  catches2[[i]] <- target_F * assessment2[[i]]
   # apply each catch to each species
   for (sp in target_sp){
-    scene6.2[[i]] <- adjust.fishing(scene6.2[[i]], "ForcedCatch", sp, yr, value=catches[sp])
-  }
+    scene6.2[[i]] <- adjust.fishing(scene6.2[[i]], "ForcedCatch", sp, year[[j]], value=catches2[[i]][sp])
+  } 
   # run 1 year
-  run6.2[[i]] <- rsim.step(scene6.2[[i]], run6.2, method = 'AB', year.end=yr)  
+  run6.2[[i]] <- rsim.step(scene6.2[[i]], run6.2[[i]], method = 'AB', year.end= year[[j]])  
 }  
 }
+rsim.plot(run6.2[[1]], all_species)
+run6.2[[1]]
+
 ```
 
 #Changing data set so we can change plotting
